--- a/index.html
+++ b/index.html
@@ -2,80 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href='https://fonts.google.com/specimen/Outfit' rel='stylesheet' type='text/css'>
-  
-  <title>Frontend Mentor | QR code component</title>
-
-  
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+  <title>Frontend Mentor | QR Code Component</title>
   <style>
-    html {
-      height: 100%;
+    :root {
+      --color-background: hsl(212, 45%, 89%);
+      --color-card-bg: hsl(0, 0%, 100%);
+      --color-text-primary: hsl(218, 44%, 22%);
+      --color-text-secondary: hsl(220, 15%, 55%);
+      --font-family: 'Outfit', sans-serif;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      margin: 0;
-      background-color: hsl(212, 45%, 89%);
-      height: 100%;
-    }
-    .qr-block {
+      font-family: var(--font-family);
+      background-color: var(--color-background);
       display: flex;
-      flex-direction: column;
       justify-content: center;
-      background-color: white;
-      padding: 15px;
-      width: 345px;
-      border-radius: 10px;
-    }
-    .qr-block * {
-      margin-bottom: 20px;
-    }
-    .qr-block img {
-      border-radius: 10px;
+      align-items: center;
+      height: 100vh;
     }
 
-    .qr-block p {
-      font-size: 15px;
-      font-family: 'Outfit', sans-serif;
-      font-weight: 700;
-      color: black;
-      text-align: center;
-    }
-    .qr-block span {
-      font-size: 12px;
-      font-family: 'Outfit', sans-serif;
-      font-weight: 400;
-      color: grey;
-      text-align: center;
-    }
     .container {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-left: 10px;
-      margin-right: 10px;
       width: 100%;
-      height: 100%;
+      padding: 20px;
+    }
+
+    .qr-card {
+      background-color: var(--color-card-bg);
+      border-radius: 15px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      max-width: 320px;
+      width: 100%;
+    }
+
+    .qr-image {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .title {
+      font-size: 18px;
+      font-weight: 700;
+      color: var(--color-text-primary);
+      margin-top: 20px;
+      line-height: 1.4;
+    }
+
+    .description {
+      font-size: 14px;
+      font-weight: 400;
+      color: var(--color-text-secondary);
+      margin-top: 10px;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-
-  <div class="container">
-    <div class="qr-block">
-      <img src="images/image-qr-code.png">
-      <p>Improve your front-end skills by building projects</p>
-      <span>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
-    </div>
-  </div>
-
-  
-  
-  <div class="attribution" style="display: none;">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Andrei Fennec</a>.
-  </div>
+  <main class="container">
+    <section class="qr-card">
+      <img 
+        src="images/image-qr-code.png"
+        class="qr-image">
+      <h1 class="title">Improve your front-end skills by building projects</h1>
+      <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </section>
+  </main>
 </body>
 </html>
