--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     .qr-card {
       background-color: var(--color-card-bg);
       border-radius: 15px;
-      padding: 20px;
+      padding: 15px;
       text-align: center;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      max-width: 320px;
+      max-width: 275px;
       width: 100%;
     }
 
@@ -67,6 +67,7 @@
       color: var(--color-text-secondary);
       margin-top: 10px;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
   </style>
 </head>
