--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <section class="qr-card">
       <img 
         src="images/image-qr-code.png"
+        alt="qr code"
         class="qr-image">
       <h1 class="title">Improve your front-end skills by building projects</h1>
       <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
